assets/adoption/css/navbar.css
* {
    box-sizing: border-box;
}

@font-face {
    font-family: "vanilla";
    src: url("../../fonts/VanillaTwilight\ Script.eot");
    src: url("../../fonts/Vanilla\ Twilight\ Script.eot?iefix") format("embedded-opentype"),
        url("../../fonts/Vanilla\ Twilight\ Script.woff") format("woff"),
        url("../../fonts/VanillaTwilight\ Script.ttf") format("truetype"),
        url("../../fonts/Vanilla\ Twilight\ Script.svg") format("svg");
    font-weight: normal;
    font-style: normal;
}

button {
    border: 0;
    padding: 0;
    background: transparent;
    cursor: pointer;
}



.menu,
.background {
    position: fixed;
}

.navbar {
    z-index: 110;
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 8vh;
    padding: 0 0 0 20px;
    background: #19191c;
    color: #f9f9f9;
}

.navbar #adopcion {
    font-family: 'vanilla';
    font-size: 2.5rem;
    transition: all .3s;
}

.navbar #adopcion:hover {
    -webkit-text-stroke: 1px #fff;
    color: transparent;
    scale: 1.1;
}

.navbar>button {
    font-size: 28px;
}

.navbar-logo {
    height: 3rem;
    filter: invert(100%);
}

.navbar-burger {
    z-index: 130;
    top: 0;
    right: 0;
    display: grid;
    place-items: center;
    color: white;
    font-size: 2rem;
    width: 72px;
    height: 72px;
    background-image: url("../../adoption/css/img/menu.svg");
    background-repeat: no-repeat;
    background-position: center;
}

body.open .navbar-burger {
    background-image: url("../../adoption/css/img/close.svg");
    z-index: 140;
}

.menu {
    z-index: 120;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 32px;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
    opacity: 0;
    visibility: hidden;
    transition: 0.5s;
}

body.open .menu {
    opacity: 1;
    visibility: visible;
}

.menu>a {
    color: #f9f9f9;
    font-size: 32px;
    font-family: "Euclid Circular A";
    text-decoration: none;
}

body.open .menu>a {
    animation: appear 0.3s both;
}

@keyframes appear {
    0% {
        opacity: 0;
        translate: 0 50px;
    }

    100% {
        opacity: 1;
    }
}

